deploy/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels: { app: trainqueue, component: api }
spec:
  replicas: 1
  selector:
    matchLabels: { app: trainqueue, component: api }
  template:
    metadata:
      labels: { app: trainqueue, component: api }
    spec:
      containers:
        - name: api
          image: ghcr.io/suryacherukuri999/trainqueue-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels: { app: trainqueue, component: api }
spec:
  selector: { app: trainqueue, component: api }
  ports:
    - port: 8080
      targetPort: 8080
