deploy/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels: { app: trainqueue, component: gateway }
spec:
  replicas: 1
  selector:
    matchLabels: { app: trainqueue, component: gateway }
  template:
    metadata:
      labels: { app: trainqueue, component: gateway }
    spec:
      containers:
        - name: gateway
          image: ghcr.io/suryacherukuri999/trainqueue-gateway:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet: { path: /healthz, port: 8081 }
            periodSeconds: 10
          readinessProbe:
            httpGet: { path: /readyz, port: 8081 }
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels: { app: trainqueue, component: gateway }
spec:
  selector: { app: trainqueue, component: gateway }
  ports:
    - port: 8081
      targetPort: 8081
